# ribeiro-barbeiro

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: build-images.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  admin.py  availability.py  config.py  database.py  email.py  limiter.py  main.py  recurrence.py  scheduling.py  security.py  seed.py
backend/app/models/: __init__.py  appointment.py  barber.py  closure.py  recurring_series.py  service.py  setting.py  user.py  working_hours.py
backend/app/routers/: __init__.py  appointments.py  auth.py  barbers.py  closures.py  services.py  settings.py  system.py
backend/tests/: conftest.py  test_api.py  test_closures.py  test_features.py  test_password_reset.py  test_recurrence.py  test_scheduling.py  test_verification.py
charts/barber-booking/: Chart.yaml  README.md  values-local.yaml  values.yaml
charts/barber-booking/templates/: NOTES.txt  _helpers.tpl  backend-configmap.yaml  backend-deployment.yaml  backend-pvc.yaml  backend-secret.yaml  backend-service.yaml  frontend-configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  postgres-secret.yaml  postgres-service.yaml  postgres-statefulset.yaml  registry-secret.yaml
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  rxconfig.py
frontend/reflex.lock/: package.json
frontend/shop/: api.py  shop.py  state.py  ui.py  views.py
